--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485349.md#1" title="万人拉和平人链 德民众：中共病毒令人惊醒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_6394-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486178.md#1" title="中共人质外交威胁美加 专家：流氓本性使然""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-81377998-600x399-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kztpea348.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488108.md#1">纽约市公园局员工念“法轮大法好”  病痛消失</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486542.md#1">川普捐款时一细节曝光 大陆网民称赞：朴实</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487958.md#1">【西岸观察】亨特电脑门曝中共惯用色诱要挟</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488040.md#1">7个月损失八千万 纽约YMCA裁掉近半员工</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488042.md#1">纽约家长抗议 学校未经同意对学生病毒检测</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488051.md#1">重振旅游业 纽约市旅游局推出新项目</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488044.md#1">纽约地铁L线12车站竣工 新设施亮相</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488240.md#1">中共成推手 印度考虑与台湾展开贸易谈判</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488116.md#1">纽约市大选日投票指南</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488123.md#1">继里根之后 川普或在11月大选赢得纽约</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488048.md#1">亨特笔电门 纽约舆论哗然：拜登大势已去</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488108.md#1">纽约市公园局员工念“法轮大法好”  病痛消失</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,868,846 人
+!共 365,870,573 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
