--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -23,6 +23,10 @@
 <p>随着欧洲各地案例的增多，英国、法国、西班牙的一些城市正在集中力量实施更严格的封锁措施来遏制病毒传播，而包括川普（特朗普）总统在内的许多美国领导人继续敦促开放经济。川普表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国早就陷入了“大萧条”之中。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>黎巴嫩安全总局局长病毒检测呈阳性</h3>
+<p>黎巴嫩安全总局的办公室周一宣布，局长阿巴斯·易卜拉欣（Abbas Ibrahim）在访问华盛顿期间，他的Covid-19检测结果呈阳性反应。</p>
+<p>发到脸书上的帖子说，阿巴斯·易卜拉欣少将在华盛顿接受了冠状病毒（中共病毒）检测，结果呈阳性反应。易卜拉欣原定在访华盛顿之后，在巴黎举行会议，但现在已被取消该会议。</p>
+<p>易卜拉欣一直是白宫与叙利亚政权的巴沙尔·阿萨德（Bashar al-Assad）政府之间，就据信被该政权拘押的美国公民问题进行谈判的一方。在访问华盛顿期间，易卜拉欣会见了美国国家安全顾问罗伯特·奥布赖恩（Robert O&#8217;Brien）。</p>
 <h3>遏止新疫情 意大利伦巴第大区将实行宵禁</h3>
 <p>意大利伦巴第（Lombardy ）是今年初Covid-19 大流行病第一波期间意大利受灾最严重的地区，但是近期爆发新疫情，其将颁布宵禁令，以遏制新病例增长。</p>
 <p>根据伦巴第区宵禁令，从本周四开始——几乎所有的公共活动和旅行都必须从晚上11点开始停止，到次日凌晨5点。地区当局还同意在周末关闭购物中心，但销售食品和基本生活用品的商店除外，以防止病毒有更多机会传播。</p>
@@ -128,7 +132,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883126.md#1" target="_blank">“1400例”闹剧出笼记</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038748.md#1" target="_blank">邢诒心：作为地主崽的童年</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
