--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/28/n11903759.md#1" target="_blank">朱镕基发言3分钟被打成右派20年</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/3/n10757327.md#1" target="_blank">共产暴政录：长春围城饿毙几十万人真相</a></li><li><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3963792.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
