--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/31/n10267172.md#1" target="_blank">许茹：迫害宗教或终止迫害 罗马皇帝不同命</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10431591.md#1" target="_blank">澳洲女子的神奇“减肥”经历  5个月70斤</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/4/n8065341.md#1" target="_blank">我和孩子经历的神话（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
