--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -5,7 +5,7 @@
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484715.md#1" title="杨威：美国总统选举冲刺摇摆州争270票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280827022-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487474.md#1" title="【一线采访】优胜教育爆雷 逾千家长老师维权""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/754d9f64807653fe3817fd468111df41-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487448.md#1" title="【直播】专访《蚕食美国》制片人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/download-49-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487273.md#1" title="拜登电邮门  朱利安尼：将发布更多爆料""><img width="73" src="https://i.epochtimes.com/assets/uploads/2006/11/611140940171508-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487273.md#1" title="拜登电邮门 朱利安尼：将发布更多爆料""><img width="73" src="https://i.epochtimes.com/assets/uploads/2006/11/611140940171508-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486851.md#1" title="广州法轮功学员刘金焕被构陷到法院""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/11-13-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486819.md#1" title="【一线采访】民众厦门举横幅要中共下台""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482137.md#1" title="【最新疫情10.19】美加边境关闭延至11月""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RW499-1-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485349.md#1" title="万人拉和平人链 德民众：中共病毒令人惊醒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_6394-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486178.md#1" title="中共人质外交威胁美加 专家：流氓本性使然""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-81377998-600x399-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kztpea348.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488268.md#1">中共五中全会前夕 政法系高官密集落马</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488044.md#1">纽约地铁L线12车站竣工 新设施亮相</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488240.md#1">中共成推手 印度考虑与台湾展开贸易谈判</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488381.md#1">文件签名显示送修电脑的是亨特·拜登本人</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488268.md#1">中共五中全会前夕 政法系高官密集落马</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488116.md#1">纽约市大选日投票指南</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488108.md#1">纽约市公园局员工念“法轮大法好” 病痛消失</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488123.md#1">继里根之后 川普或在11月大选赢得纽约</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488048.md#1">亨特笔电门 纽约舆论哗然：拜登大势已去</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487884.md#1">湖北高院副院长在办公室自杀身亡</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,871,373 人
+!共 365,872,488 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
