--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10920991.md#1" target="_blank">十八年宿疾消散 台湾女子感恩法轮功</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10570999.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（中）</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132948.md#1" target="_blank">93岁老人：李洪志大师给了我第二次生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
